syntax = "proto3";
 
package hello; //定义包名
 
// 定义服务
service HelloService {
    // 定义一个 SayHello 方法
    rpc SayHello (HelloRequest) returns (HelloReply);
}
 
message HelloRequest {
    string name = 1;
}
 
message HelloReply {
    string message = 1;
}
